Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1283

2.2.0 fails to build from source

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0, Lustre 2.1.4
    • Lustre 2.2.0
    • None
    • 3
    • 4634

      Hi,

      lustre git tag 2.2.0 fails to build from source:

      cc1: warnings being treated as errors
      mount_lustre.c: In function 'set_blockdev_tunables':
      mount_lustre.c:373: error: 'savept' may be used uninitialized in this function
      make[4]: *** [mount_lustre.o] Error 1

      Looks like commit
      fd09533f8b594ddf80cf8c61c78b59d3bf86dba5
      was dropped somewhere along the way.

      Cheers,

      Guy

            mdiep Minh Diep - TLC
            gmpc@sanger.ac.uk Guy Coates
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: